tests/js_error/parser/labeled_function.exp
SyntaxError: Functions cannot be labeled
  ┌ tests/js_error/parser/labeled_function.js:2:1
  |
2 | label: function test() {}
  | ^